--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "input-otp": "^1.4.2",
     "jodit-react": "^5.2.38",
     "lucide-react": "^0.553.0",
